@@ -1,4 +1,5 @@
 1.3 - TBD
+    * Fixed a problem causing render progress to reset after loading a scene
     * Clouds can now be moved in all directions
     * HDRI sky textures can now be used, supported formats are:
         + RGBE (.hdr)
